--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,11 @@ jobs:
 
       - name: Set up Spack
         uses: spack/setup-spack@v2.1.1
+        with:
+          ref: releases/v1.0      # Spack version (examples: develop, releases/v0.23)
+          buildcache: true  # Configure oci://ghcr.io/spack/github-actions-buildcache
+          color: true       # Force color output (SPACK_COLOR=always)
+          path: spack       # Where to clone Spack
 
       - name: Install
         run: spack -e . install --target=${{matrix.target}}
