--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           path: spack       # Where to clone Spack
 
       - name: Install
-        run: spack -e . install --target=${{matrix.target}}
+        run: spack -e . install
 
       - name: Run
         shell: spack-bash {0}
