--- a/spack.yaml
+++ b/spack.yaml
@@ -3,12 +3,12 @@
 # It describes a set of packages to be installed, along with
 # configuration settings.
 spack:
-  definitions:
-  - compilers: [gcc@11.4.0]
+#  definitions:
+#  - compilers: [gcc@11.4.0]
 
   # add package specs to the `specs` list
   specs:
-  - $compilers
+#  - $compilers
   - cmake
   - pdi
   - pdiplugin-decl-hdf5
