--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ on:
     branches:
       - main
 
-
 jobs:
   buildcache-linux-x86:
     strategy:
@@ -20,7 +19,7 @@ jobs:
     runs-on: ${{matrix.os}}
     permissions:
       packages: write
-    steps:
+    steps: &buildcache-steps
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -54,27 +53,35 @@ jobs:
         run: spack -e . buildcache push --base-image ubuntu:22.04 --update-index numpex-buildcache
         if: ${{ !cancelled() }}
 
-#  buildcache-linux-arm:
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        os: [ ubuntu-24.04-arm ]
-#        target: [ x86_64_v2, x86_64_v3 ]
-#    runs-on: ${{matrix.os}}
-#
-#  buildcache-macos-x86:
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        os: [ macos-13 ]
-#        target: [ m1 ] # m2 ?
-#    runs-on: ${{matrix.os}}
-#
-#  buildcache-macos-arm:
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        os: [ macos-14, macos-15 ]
-#        target: [ m1, m2 ]
-#    runs-on: ${{matrix.os}}
+  buildcache-linux-arm:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-24.04-arm ]
+        target: [ zen3, zen4 ]
+    runs-on: ${{matrix.os}}
+    permissions:
+      packages: write
+    steps: *buildcache-steps
 
+  buildcache-macos-intel:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ macos-13 ]
+        target: [ x86_64_v2, x86_64_v3 ]
+    runs-on: ${{matrix.os}}
+    permissions:
+      packages: write
+    steps: *buildcache-steps
+
+  buildcache-macos-arm:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ macos-14, macos-15 ]
+        target: [ m1 ]
+    runs-on: ${{matrix.os}}
+    permissions:
+      packages: write
+    steps: *buildcache-steps
