--- a/spack.yaml.in
+++ b/spack.yaml.in
@@ -43,6 +43,6 @@ spack:
       access_pair:
         id_variable: GITHUB_USER
         secret_variable: GITHUB_TOKEN
-  config:
-    install_tree:
-      padded_length: 512
+#  config:
+#    install_tree:
+#      padded_length: 512
