add x86_64 + spack arch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-24.04 ]
-        target: [ x86_64_v2, x86_64_v3 ]
+        target: [ x86_64, x86_64_v2, x86_64_v3 ]
     runs-on: ${{matrix.os}}
     permissions:
       packages: write
@@ -34,7 +34,10 @@ jobs:
           color: true       # Force color output (SPACK_COLOR=always)
           path: spack       # Where to clone Spack
 
-      - name: Spec compilers
+      - name: Spack arch
+        run: spack arch
+      
+      - name: Spack compilers
         run: |
           spack compiler find
           spack compilers
@@ -71,7 +74,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-13 ]
-        target: [ x86_64_v2, x86_64_v3 ]
+        target: [ x86_64, x86_64_v2, x86_64_v3 ]
     runs-on: ${{matrix.os}}
     permissions:
       packages: write
