--- a/spack.yaml.in
+++ b/spack.yaml.in
@@ -3,8 +3,8 @@
 # It describes a set of packages to be installed, along with
 # configuration settings.
 spack:
-#  definitions:
-#  - compilers: [gcc@11.4.0]
+  definitions:
+  - compilers: [gcc@14]
 
   concretizer:
     unify: true
@@ -18,8 +18,8 @@ spack:
 
   # add package specs to the `specs` list
   specs:
-#  - $compilers
-  - cmake
+  - $compilers
+  - cmake@4
   - pdi~fortran
   - pdiplugin-decl-hdf5
   - pdiplugin-mpi
